# websub

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  websub.cabal
app/: Main.hs
example/: Main.hs
graphics/: styles.iuml  subscription.uml.txt
src/Network/HTTP/: WebSub.hs
src/Network/HTTP/WebSub/: HTTPClient.hs  Middleware.hs  Subscriber.hs
test/Network/HTTP/WebSub/: SubscriberSpec.hs
