name:                websub
version:             0.1.0.0
synopsis:            A WebSub (RFC7230) client for Haskell
description:         Subscribe to topics on other hubs and get webhooks to
                     your server of choice.
homepage:            https://github.com/owickstrom/websub#readme
license:             MPL-2.0
license-file:        LICENSE
author:              Oskar Wickström
maintainer:          oskar.wickstrom@gmail.com
copyright:           Oskar Wickström
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.HTTP.WebSub
                     , Network.HTTP.WebSub.Subscriber
                     , Network.HTTP.WebSub.Middleware
                     , Network.HTTP.WebSub.HTTPClient
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , unordered-containers
                     , hashable
                     , network-uri
                     , http-types
                     , http-media
                     , http-conduit
                     , http-api-data
                     , http-link-header
                     , bytestring
                     , wai
                     , text
  default-language:    Haskell2010

executable websub-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , websub
                     , network-uri
                     , http-media
                     , http-types
                     , bytestring
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite websub-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , mtl
                     , network-uri
                     , websub
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/owickstrom/websub
